Mon Jul 20 07:02:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/Configurators/Server_Configurator.cpp:
        * ciao/ComponentServer/Configurators/Server_Configurator.h:
          Use bool for rt_support_ and added a default value to the constructor
          to resolve problems with older gcc versions

Sun Jul 19 18:25:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Logger/Logger_Service.cpp:
        * DAnCE/Logger/Logger_Service.h:
          Unicode fixes

Sun Jul 19 17:22:08 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/IDL_Test/Keywords/Keywords.mpc:

          avoids mfc, as building with mfc enabled causes 'interface'
          to become a language keyword, where it otherwise would not be.

Sun Jul 19 09:50:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Port_Activator_T.cpp:
          Layout change

        * ciao/Servants/Servants.mpc:
          Port_Activator_T is a template file, not a source file

Sun Jul 19 09:46:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DomainApplication/Domain_Application_Impl.cpp:
          Layout changes

        * DAnCE/DomainApplication/Domain_Application_Impl.h:
          Made startLaunch public

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
          Layout, const, datatype changes

        * DAnCE/MPC/config/dance_repositorymanagerbase.mpb:
          Added after JAWS

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
          Layout changes

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
          Layout, datatype, const changes

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
          Layout changes

        * DAnCE/Plan_Generator/Plan_Generator_Impl.cpp:
          Corrected messages

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Module.cpp:
          Unicode fix
